Bug 455012 - With a large number of tabs open, the browser starts slowly
Summary: With a large number of tabs open, the browser starts slowly
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.04.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Juraj
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-08 08:23 UTC by levovix
Modified: 2023-07-29 21:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description levovix 2022-06-08 08:23:26 UTC
SUMMARY
With a large number of tabs open, the browser starts slowly (for me it's ~30 seconds).
(The tabs themselves are not loaded)


STEPS TO REPRODUCE
1. Open, for example, 100 tabs.
2. Set "restore session" at startup in settings.
3. Restart browser.

OBSERVED RESULT
loaded at ~30s

EXPECTED RESULT
loaded at ~1s

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.94.0
Qt Version: 5.15
Comment 1 Juraj 2022-08-11 20:15:05 UTC
Can confirm.
Comment 2 Bug Janitor Service 2023-04-16 13:09:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/50
Comment 3 Bug Janitor Service 2023-07-20 23:06:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/58
Comment 4 Juraj 2023-07-29 20:56:50 UTC
Git commit 8b2721e85c2cbbf3a5d0f31fb22bc45c8393e565 by Juraj Oravec.
Committed on 29/07/2023 at 22:50.
Pushed by jurajo into branch 'master'.

Skip show/hide close button when restoring session

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +7    -2    src/lib/tabwidget/tabbar.cpp
M  +4    -0    src/lib/tabwidget/tabbar.h
M  +4    -0    src/lib/tabwidget/tabwidget.cpp

https://invent.kde.org/network/falkon/-/commit/8b2721e85c2cbbf3a5d0f31fb22bc45c8393e565
Comment 5 Juraj 2023-07-29 21:01:52 UTC
Git commit b3b413c6605a9d0f10c63fd1cdd844836bbfe8f1 by Juraj Oravec.
Committed on 29/07/2023 at 23:00.
Pushed by jurajo into branch 'release/23.08'.

Skip show/hide close button when restoring session

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +7    -2    src/lib/tabwidget/tabbar.cpp
M  +4    -0    src/lib/tabwidget/tabbar.h
M  +4    -0    src/lib/tabwidget/tabwidget.cpp

https://invent.kde.org/network/falkon/-/commit/b3b413c6605a9d0f10c63fd1cdd844836bbfe8f1