Skip show/hide close button when restoring session

BUG: 455012

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>